--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://35.247.161.13:5432/travelmarketplace
+    url: jdbc:postgresql://localhost:5432/TravelMarketPlace
     username: postgres
-    password: capstonevlu
+    password: 123456
   jpa:
     hibernate:
       ddl-auto: none
