--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,10 @@ server:
     include-message: always
 
 spring:
+  servlet:
+    multipart:
+      max-request-size: 30MB
+      max-file-size: 16MB
   datasource:
     url: jdbc:postgresql://35.247.161.13:5432/travelmarketplace
     username: postgres
